# estoque-em-tk

./: .gitignore  README.md  pyproject.toml
src/: main.py  teste.py
src/project/components/: constants.py  input_data.py  login.py  main_window.py  utils.py
src/project/components/login_components/: image_label.py  input_data.py  login_root.py  login_window.py
